cluster-api/infrastructure/docker/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capd-system/capd-serving-cert
  labels:
    cluster.x-k8s.io/provider: infrastructure-docker
    clusterctl.cluster.x-k8s.io: ""
    clusterctl.cluster.x-k8s.io/lifecycle: shared
  name: capd-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capd-webhook-service
      namespace: capd-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-dockercluster
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.dockercluster.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha4
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockerclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capd-webhook-service
      namespace: capd-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-dockerclustertemplate
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.dockerclustertemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha4
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockerclustertemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capd-webhook-service
      namespace: capd-system
      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-dockermachinetemplate
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.dockermachinetemplate.infrastructure.cluster.x-k8s.io
  rules:
  - apiGroups:
    - infrastructure.cluster.x-k8s.io
    apiVersions:
    - v1alpha4
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockermachinetemplates
  sideEffects: None
